
[TestDelete_ClusterExists_PrintsDeleteSuccess/K3d - 1]
🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
---

[TestDelete_ClusterExists_PrintsDeleteSuccess/Kind - 1]
🗑️ Delete cluster...
► deleting cluster
✔ cluster deleted
✗ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ClusterExists_PrintsDeleteSuccess/Talos - 1]
🗑️ Delete cluster...
► deleting cluster
⚠ failed to disconnect mirror registries: disconnect mirror registries: failed to create registry manager: apiClient cannot be nil
⚠ failed to disconnect local registry: create registry manager: apiClient cannot be nil
✔ cluster deleted
✗ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ClusterNotFound_SucceedsIdempotent/K3d - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist
---

[TestDelete_ClusterNotFound_SucceedsIdempotent/Kind - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist
✗ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---

[TestDelete_ClusterNotFound_SucceedsIdempotent/Talos - 1]
🗑️ Delete cluster...
► deleting cluster
✗ cluster does not exist
✗ failed to cleanup local registry: check registry existence: create registry service: docker client is required
---
